[gd_scene load_steps=5 format=3 uid="uid://bmbl8n4nrqv36"]

[ext_resource type="Script" path="res://Enemy.gd" id="1_frdax"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_6ioba"]

[sub_resource type="BoxMesh" id="BoxMesh_kx6a1"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_bq2yg"]
height = 12.0
radius = 14.0

[node name="Enemy" type="CharacterBody3D"]
script = ExtResource("1_frdax")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
mesh = SubResource("CapsuleMesh_6ioba")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]

[node name="face" type="MeshInstance3D" parent="."]
transform = Transform3D(0.3, 0, 0, 0, 0.3, 0, 0, 0, 0.3, 0, 1.19074, -0.521882)
mesh = SubResource("BoxMesh_kx6a1")

[node name="SightCone" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 1)

[node name="CollisionShape3D" type="CollisionShape3D" parent="SightCone"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -12)
shape = SubResource("CylinderShape3D_bq2yg")

[node name="SightRaycast" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.73931, -1.02851)
target_position = Vector3(0, 0, -100)
debug_shape_custom_color = Color(0.964706, 0, 0, 1)
debug_shape_thickness = 4

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
